[package]
name = "todo-mvc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# Web libs
warp = "0.3"
# DB Libs
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres" ] }
sqlb = "0.4.0"
watch = "0.2.3"

[dev-dependencies]
anyhow = "1"
